--- a/app/src/main/res/layout/fragment__cart_student.xml
+++ b/app/src/main/res/layout/fragment__cart_student.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/yellow"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -8,6 +9,7 @@
         android:id="@+id/textTotalPrice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:text="Total: ₹0"
         android:textSize="18sp"
         android:padding="10dp" />
@@ -22,6 +24,7 @@
         android:layout_width="290dp"
         android:layout_height="wrap_content"
         android:text="Place Order"
+        android:backgroundTint="@color/dark_orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
