--- a/app/src/main/res/drawable/button_rounded.xml
+++ b/app/src/main/res/drawable/button_rounded.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="?attr/colorPrimary" />
+    <solid android:color="@color/dark_orange" />
     <corners android:radius="24dp" />
     <padding
         android:left="10dp"
