--- a/app/src/main/res/drawable/custom_edittext.xml
+++ b/app/src/main/res/drawable/custom_edittext.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="ExtraText"
     android:shape="rectangle">
 
+    <!-- Fill color -->
+    <solid android:color="#FFF9C4"/> <!-- Light Yellow -->
+
+    <!-- Border -->
     <stroke
         android:width="3dp"
-        android:color="@color/dark_brown"/>
+        android:color="@color/light_yellow"/>
 
-    <corners
-        android:radius="20dp"/>
+    <!-- Corner radius -->
+
 </shape>
