--- a/app/src/main/res/layout/activity_home_page_student.xml
+++ b/app/src/main/res/layout/activity_home_page_student.xml
@@ -11,7 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/purple_200">
+        android:background="@color/yellow">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
@@ -22,18 +22,9 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:navigationIcon="@drawable/ic_menu"
-            app:navigationIconTint="@color/purple"
+            app:navigationIconTint="@color/dark_orange"
             android:contentInsetStart="16dp">
-        <ImageView
-            android:id="@+id/top_image"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:src="@drawable/fdalogo"
-            android:scaleType="fitCenter"
-            android:layout_marginStart="40dp"
-            android:layout_centerHorizontal="true"
-            android:adjustViewBounds="true"
-            android:layout_alignTop="@id/toolbarr"/>
+
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -52,18 +43,20 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/bottomAppBar"
                 android:layout_gravity="bottom"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/dark_orange"
                 app:fabCradleMargin="10dp"
                 app:fabAlignmentMode="center"
                 app:fabCradleRoundedCornerRadius="50dp">
 
                 <com.google.android.material.bottomnavigation.BottomNavigationView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/bottom_nevigation"
                     app:labelVisibilityMode="labeled"
+                    app:itemIconTint="@color/white"
+                    app:itemTextColor="@color/white"
                     app:menu="@menu/bottom_navigation_menu_student"
-                    android:background="@android:color/transparent"/>
+                    android:background="@color/dark_orange"/>
             </com.google.android.material.bottomappbar.BottomAppBar>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -72,7 +65,7 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/white"
                 android:src="@drawable/baseline_add_24"
-                android:tint="@color/purple"
+                android:tint="@color/dark_brown"
                 app:layout_anchor="@+id/bottomAppBar"
                 app:layout_anchorGravity="center"
                 app:maxImageSize="44dp"
@@ -86,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:background="@color/purple"
+        android:background="@color/dark_orange"
         app:itemIconTint="@color/white"
         app:itemTextColor="@color/white"
         android:theme="@style/ThemeOverlay.AppCompat.navTheme"
