--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -1,105 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#F5CB58"
-    android:gravity="center">
+    android:background="#F5CB58">
+
+    <TextView
+        android:id="@+id/loginText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Log In"
+        android:textSize="36sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:textColor="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/cardView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.15"
+        android:layout_marginBottom="16dp"/>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="370dp"
-        android:layout_height="550dp"
-
-        android:layout_margin="16dp"
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="@android:color/white"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="12dp">
+        app:cardCornerRadius="60dp"
+        app:cardElevation="12dp"
+        app:layout_constraintTop_toBottomOf="@id/loginText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="24dp">
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
-            <TextView
-                android:id="@+id/loginText"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="32dp"
-                android:gravity="center"
-                android:text="Log In"
-                android:textColor="@color/dark_brown"
-                android:textSize="36sp"
-                android:textStyle="bold" />
+                android:layout_marginTop="60dp"
+                android:orientation="vertical"
+                android:padding="24dp">
 
-            <EditText
-                android:id="@+id/Username"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="16dp"
-                android:background="@drawable/custom_edittext"
-                android:hint="User E-mail*"
-                android:inputType="textEmailAddress"
-                android:padding="12dp"
-                android:textColor="@color/black" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email Id:"
+                    android:textColor="@color/dark_brown"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/Password"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/custom_edittext"
-                android:hint="Password*"
-                android:inputType="textPassword"
-                android:padding="12dp"
-                android:textColor="@color/black" />
+                <EditText
+                    android:id="@+id/Username"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginBottom="16dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="User E-mail*"
+                    android:textColorHint="@color/dark_brown"
+                    android:inputType="textEmailAddress"
+                    android:padding="12dp"
+                    android:textColor="@color/black" />
 
-            <TextView
-                android:id="@+id/ForgotPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="48dp"
-                android:layout_gravity="end"
-                android:layout_marginBottom="24dp"
-                android:clickable="true"
-                android:focusable="true"
-                android:text="Forgot Password?"
-                android:textColor="@color/dark_orange"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Password:"
+                    android:textColor="@color/dark_brown"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <Button
-                android:id="@+id/Loginbutton"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginBottom="24dp"
-                android:backgroundTint="@color/purple"
-                android:text="Login"
-                android:textSize="18sp"
-                app:cornerRadius="20dp" />
+                <EditText
+                    android:id="@+id/Password"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:textColorHint="@color/dark_brown"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/custom_edittext"
+                    android:hint="Password*"
+                    android:inputType="textPassword"
+                    android:padding="12dp"
+                    android:textColor="@color/black" />
 
-            <TextView
-                android:id="@+id/signuptext"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"
-                android:text="Not Registered Yet? SignUp Now"
-                android:textColor="@color/purple"
-                android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/ForgotPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="48dp"
+                    android:layout_gravity="end"
+                    android:layout_marginBottom="24dp"
+                    android:text="Forgot Password?"
+                    android:textColor="@color/dark_orange"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:clickable="true"
+                    android:focusable="true" />
 
-            <Button
-                android:id="@+id/Registerbutton"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:layout_marginBottom="8dp"
-                android:backgroundTint="@color/purple"
-                android:text="Register"
-                android:textSize="18sp"
-                app:cornerRadius="20dp" />
+                <Button
+                    android:id="@+id/Loginbutton"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginBottom="24dp"
+                    android:backgroundTint="@color/dark_orange"
+                    android:text="Login"
+                    android:textSize="18sp"
+                    app:cornerRadius="20dp" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/signuptext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:gravity="center"
+                    android:text="Not Registered Yet? SignUp Now"
+                    android:textColor="@color/dark_brown"
+                    android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/Registerbutton"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:layout_marginBottom="8dp"
+                    android:backgroundTint="@color/dark_orange"
+                    android:text="Register"
+                    android:textSize="18sp"
+                    app:cornerRadius="20dp" />
+
+            </LinearLayout>
+        </ScrollView>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
