--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -1,38 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:gravity="center"
-    android:background="@color/white">
+    android:background="@color/yellow"
+    android:padding="16dp">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardOrderSummary"
+        android:layout_width="408dp"
+        android:layout_height="405dp"
+        android:layout_margin="16dp"
+        android:backgroundTint="@color/light_yellow"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="40dp"
+            android:orientation="vertical"
+            android:padding="20dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:gravity="center"
+                android:paddingBottom="20dp"
+                android:text="Delivery Charges: Rs 20"
+                android:textColor="@color/dark_brown"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvOrderPrice"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:gravity="center"
+                android:paddingBottom="20dp"
+                android:text="Order Price:"
+                android:textColor="@color/dark_brown"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/tvTotalAmount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingBottom="20dp"
+                android:text="Total Amount:"
+                android:textColor="@color/dark_brown"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/btnPayNow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/dark_orange"
+                android:text="Pay Now"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/tvOrderSummary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:paddingBottom="10dp"
         android:text="Order Summary"
+        android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:gravity="center"
-        android:paddingBottom="10dp"/>
+        tools:layout_editor_absoluteX="18dp"
+        tools:layout_editor_absoluteY="77dp"
+        tools:ignore="MissingConstraints" />
 
-    <TextView
-        android:id="@+id/tvTotalAmount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Total Amount: "
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:gravity="center"
-        android:paddingBottom="20dp"/>
-
-    <Button
-        android:id="@+id/btnPayNow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pay Now"
-        android:backgroundTint="@color/black"
-        android:textColor="@color/white"
-        android:textSize="18sp"/>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
