--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -1,162 +1,195 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/loginpg"
-    android:gravity="center"
+    android:background="@color/yellow"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/registertext"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp" />
+
     <androidx.cardview.widget.CardView
-        android:layout_width="350dp"
-        android:layout_height="600dp"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/custom_edittext"
-        app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
-
-        <TextView
-            android:id="@+id/registertext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/purple"
-            android:text="Register"
-            android:layout_marginTop="10dp"
-            android:textSize="40sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/RName"
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="80dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="Enter Full Name *"
-            android:importantForAccessibility="yes"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/REmail"
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="140dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="Enter Email *"
-            android:importantForAccessibility="yes"
-            android:inputType="textEmailAddress"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"/>
-
-        <EditText
-            android:id="@+id/RId"
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="200dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="ID (5 uppercase + 5 digits) *"
-            android:importantForAccessibility="yes"
-            android:inputType="textCapCharacters"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"/>
-
-        <EditText
-            android:id="@+id/Phoneno"
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="260dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="Phone No (10 digits) *"
-            android:importantForAccessibility="yes"
-            android:inputType="phone"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"/>
-
-        <EditText
-            android:id="@+id/RPassword"
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="320dp"
-            android:layout_marginLeft="20dp"
-            android:background="@drawable/custom_edittext"
-            android:hint="Password (min 6 characters) *"
-            android:importantForAccessibility="yes"
-            android:inputType="textPassword"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"/>
-<RadioGroup
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/userTypeGroup"
-    android:orientation="horizontal"
-    android:layout_marginTop="380dp"
-    android:gravity="center">
-    <RadioButton
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:text="Student"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="40dp"
-        android:id="@+id/radioStudent"
-        android:buttonTint="@color/purple"
-        android:checked="true"/>
-
-    <RadioButton
-        android:id="@+id/radioVendor"
-        android:layout_width="wrap_content"
+        android:id="@+id/cardView"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:buttonTint="@color/purple"
-        android:text="Vendor" />
+        android:layout_marginTop="100dp"
+        android:background="@drawable/custom_edittext"
+        app:cardCornerRadius="60dp"
+        app:cardElevation="20dp"
+        app:layout_constraintTop_toBottomOf="@id/registertext"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-</RadioGroup>
-        <EditText
-            android:layout_width="310dp"
-            android:layout_height="50dp"
-            android:id="@+id/shopName"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="20dp"
-            android:layout_below="@+id/userTypeGroup"
-            android:background="@drawable/custom_edittext"
-            android:hint="Enter Shop Name *"
-            android:importantForAccessibility="yes"
-            android:visibility="gone"
-            android:padding="8dp"
-            android:textColor="@color/black"
-            android:textSize="16sp"/>
-
-
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="360dp"
-            android:gravity="center"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
+
             android:padding="16dp">
+
+            <EditText
+                android:id="@+id/RName"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:textColorHint="@color/dark_brown"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/custom_edittext"
+                android:hint="Enter Full Name *"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/REmail"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:hint="Enter Email *"
+                android:textColorHint="@color/dark_brown"
+                android:inputType="textEmailAddress"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_margin="16dp"
+                app:layout_constraintTop_toBottomOf="@id/RName" />
+
+            <EditText
+                android:id="@+id/RId"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:hint="ID (5 uppercase + 5 digits) *"
+                android:inputType="textCapCharacters"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/dark_brown"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_margin="16dp"
+                app:layout_constraintTop_toBottomOf="@id/REmail" />
+
+            <EditText
+                android:id="@+id/Phoneno"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:hint="Phone No (10 digits) *"
+                android:inputType="phone"
+                android:padding="8dp"
+                android:textColorHint="@color/dark_brown"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_margin="16dp"
+                app:layout_constraintTop_toBottomOf="@id/RId" />
+
+            <EditText
+                android:id="@+id/RPassword"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_edittext"
+                android:hint="Password (min 6 characters) *"
+                android:inputType="textPassword"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/dark_brown"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_margin="16dp"
+                app:layout_constraintTop_toBottomOf="@id/Phoneno" />
+
+            <RadioGroup
+                android:id="@+id/userTypeGroup"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@id/RPassword"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="16dp">
+
+                <RadioButton
+                    android:id="@+id/radioStudent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Student"
+                    android:buttonTint="@color/light_yellow"
+                    android:checked="true"
+                    android:textSize="16sp"
+                    android:layout_marginEnd="40dp" />
+
+                <RadioButton
+                    android:id="@+id/radioVendor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Vendor"
+                    android:textSize="16sp"
+                    android:buttonTint="@color/light_yellow" />
+            </RadioGroup>
+
+            <EditText
+                android:id="@+id/shopName"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:hint="Enter Shop Name *"
+                android:visibility="gone"
+                android:background="@drawable/custom_edittext"
+                android:padding="8dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintTop_toBottomOf="@id/userTypeGroup"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp"/>
 
             <Button
                 android:id="@+id/RRegisterButton"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:backgroundTint="@color/purple"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:backgroundTint="@color/dark_orange"
                 android:text="Register"
-                android:textSize="18sp"
-                android:layout_marginTop="60dp"
                 android:textColor="@android:color/white"
-                app:cornerRadius="20dp"/>
+                android:textSize="18sp"
+                app:cornerRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/shopName" />
 
             <ProgressBar
                 android:id="@+id/progressBar"
@@ -164,30 +197,42 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@id/RRegisterButton"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="10dp" />
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/logintext"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="Already have an account? Login now"
+                android:textAlignment="center"
+                android:textColor="@color/dark_brown"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/progressBar" />
 
-        <TextView
-            android:id="@+id/logintext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/purple"
-            android:text="Already have an account? Login now"
-            android:layout_marginTop="500dp"
-            android:textSize="16sp"/>
-
-        <Button
-            android:id="@+id/RLoginButton"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="520dp"
-            android:backgroundTint="@color/purple"
-            android:text="Login"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"
-            app:cornerRadius="20dp"/>
+            <Button
+                android:id="@+id/RLoginButton"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/dark_orange"
+                android:text="Login"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                app:cornerRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/logintext" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
