--- a/app/src/main/res/layout/dialog_add_address.xml
+++ b/app/src/main/res/layout/dialog_add_address.xml
@@ -3,46 +3,61 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
+    android:background="@color/yellow"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/etStudentName"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:textColor="@color/black"
+        android:textColor="@color/dark_brown"
+        android:layout_marginTop="10dp"
+        android:background="@color/light_yellow"
         android:hint="Student Name"/>
 
     <EditText
         android:id="@+id/etPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:background="@color/light_yellow"
+        android:textColor="@color/dark_brown"
         android:hint="Phone Number"
         android:inputType="phone"/>
 
     <EditText
         android:id="@+id/etHostel"
         android:layout_width="match_parent"
+        android:background="@color/light_yellow"
         android:layout_height="48dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/dark_brown"
         android:hint="Hostel/Department"/>
 
     <EditText
         android:id="@+id/etRoom"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:background="@color/light_yellow"
+        android:textColor="@color/dark_brown"
         android:hint="Room Number"/>
 
     <Button
         android:id="@+id/btnSaveAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/dark_orange"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"
         android:text="Save"/>
 
     <Button
         android:id="@+id/btnCancel"
         android:layout_width="match_parent"
+        android:backgroundTint="@color/dark_orange"
+        android:textSize="18sp"
+        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
         android:text="Cancel"/>
 
