--- a/app/src/main/res/layout/fragment__delivery_address_student.xml
+++ b/app/src/main/res/layout/fragment__delivery_address_student.xml
@@ -3,17 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/yellow"
     android:padding="16dp">
 
     <Button
         android:id="@+id/btnAddNewAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/dark_orange"
         android:text="Add New Address" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewAddresses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/light_yellow"
         android:layout_marginTop="10dp"/>
 </LinearLayout>
