--- a/app/src/main/res/layout/fragment__profile_student.xml
+++ b/app/src/main/res/layout/fragment__profile_student.xml
@@ -1,41 +1,75 @@
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:orientation="vertical"
-    android:background="@drawable/fgprofile">
+    android:background="@color/yellow"
+    >
 
-    <!-- CardView for Profile Details -->
+    <!-- Circular Logout Button at Top-Right -->
+
+    <!-- Title -->
+    <ImageButton
+        android:id="@+id/logout_button_stu"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/button_rounded"
+        android:contentDescription="Logout"
+        android:scaleType="centerInside"
+        android:src="@drawable/baseline_exit_to_app_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/profile_title"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:text="PROFILE"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="30dp" />
+
+    <!-- CardView for profile -->
     <androidx.cardview.widget.CardView
+        android:id="@+id/profile_card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="15dp"
-        android:layout_marginTop="180dp"
         app:cardCornerRadius="12dp"
-        app:cardElevation="5dp">
+        app:cardElevation="18dp"
+        app:layout_constraintTop_toBottomOf="@+id/profile_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="450dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="20dp">
 
             <EditText
                 android:id="@+id/profile_name"
                 android:layout_width="match_parent"
-                android:layout_marginEnd="20dp"
                 android:layout_height="48dp"
-                android:background="@android:drawable/editbox_background"
-                android:layout_marginStart="20dp"
                 android:hint="NAME"
+                android:background="@color/light_yellow"
+                android:textColor="@color/dark_brown"
+                android:textColorHint="@color/dark_brown"
                 android:padding="10dp"
                 android:textSize="16sp"
-                android:textColor="@color/black"
-                android:focusable="false"
                 android:gravity="center_vertical"
+                android:focusable="false"
                 android:layout_marginBottom="10dp"/>
 
             <EditText
@@ -43,14 +77,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:hint="E-MAIL"
-                android:background="@android:drawable/editbox_background"
+                android:background="@color/light_yellow"
+                android:textColor="@color/dark_brown"
+                android:textColorHint="@color/dark_brown"
                 android:padding="10dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
                 android:textSize="16sp"
-                android:textColor="@color/black"
-                android:focusable="false"
                 android:gravity="center_vertical"
+                android:focusable="false"
                 android:layout_marginBottom="10dp"/>
 
             <EditText
@@ -58,14 +91,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:hint="PHONE NO"
-                android:background="@android:drawable/editbox_background"
+                android:background="@color/light_yellow"
+                android:textColor="@color/dark_brown"
+                android:textColorHint="@color/dark_brown"
                 android:padding="10dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
                 android:textSize="16sp"
-                android:textColor="@color/black"
-                android:focusable="false"
                 android:gravity="center_vertical"
+                android:focusable="false"
                 android:layout_marginBottom="10dp"/>
 
             <EditText
@@ -73,68 +105,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:hint="ID"
+                android:background="@color/light_yellow"
+                android:textColor="@color/dark_brown"
+                android:textColorHint="@color/dark_brown"
                 android:padding="10dp"
                 android:textSize="16sp"
-                android:background="@android:drawable/editbox_background"
-                android:textColor="@color/black"
-                android:layout_marginEnd="20dp"
-                android:layout_marginStart="20dp"
-                android:focusable="false"
                 android:gravity="center_vertical"
-                android:layout_marginBottom="10dp"/>
+                android:focusable="false"
+                android:layout_marginBottom="20dp"/>
+
+            <Button
+                android:id="@+id/change_password_button"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:text="Change Password"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/dark_orange"
+                android:layout_marginTop="10dp"/>
+
+            <Button
+                android:id="@+id/edit_profile_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit Profile"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/dark_orange"
+                android:layout_marginTop="10dp"/>
+
+            <Button
+                android:id="@+id/save_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Save Changes"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:backgroundTint="@color/dark_orange"
+                android:layout_marginTop="10dp"/>
+
         </LinearLayout>
-
-        <!-- Buttons Section -->
-        <Button
-            android:id="@+id/change_password_button"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:text="Change Password"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/purple_200"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="250dp"/>
-
-        <Button
-            android:id="@+id/edit_profile_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:text="Edit Profile"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/purple_200"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="310dp"/>
-
-        <Button
-            android:id="@+id/save_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Save Changes"
-            android:textSize="20sp"
-            android:layout_marginEnd="40dp"
-            android:layout_marginStart="40dp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/purple_200"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="370dp"/>
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/logout_button_stu"
-        android:layout_width="360dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/purple_200"
-        android:text="Logout"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText" />
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
