designing of student done

--- a/app/src/main/res/layout/fragment__contactus_student.xml
+++ b/app/src/main/res/layout/fragment__contactus_student.xml
@@ -3,9 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/yellow">
+    android:background="@color/yellow"
+    tools:context=".Fragment_ContactusStudent">
 
     <TextView
         android:layout_width="match_parent"
