--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/yellow"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:context=".PaymentPage">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardOrderSummary"
@@ -16,16 +17,19 @@
         android:backgroundTint="@color/light_yellow"
         app:cardCornerRadius="16dp"
         app:cardElevation="10dp"
+        android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.517"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.738">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_marginTop="40dp"
+            android:gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="20dp">
 
@@ -80,8 +84,12 @@
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="18dp"
-        tools:layout_editor_absoluteY="77dp"
+        app:layout_constraintBottom_toTopOf="@+id/cardOrderSummary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.688"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
