--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -9,6 +9,7 @@
     android:background="@color/yellow"
     tools:context=".MainActivity">
 
+    <!-- Title -->
     <TextView
         android:id="@+id/registertext"
         android:layout_width="0dp"
@@ -18,45 +19,48 @@
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textAlignment="center"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="30dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Card View -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
-        android:background="@drawable/custom_edittext"
-        app:cardCornerRadius="60dp"
-        app:cardElevation="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="12dp"
+        app:cardBackgroundColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/registertext"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <!-- Inner Layout -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
+            android:layout_height="wrap_content"
             android:padding="16dp">
 
+            <!-- Full Name -->
             <EditText
                 android:id="@+id/RName"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
-                android:textColorHint="@color/dark_brown"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/custom_edittext"
                 android:hint="Enter Full Name *"
                 android:padding="8dp"
                 android:textColor="@color/black"
+                android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- Email -->
             <EditText
                 android:id="@+id/REmail"
                 android:layout_width="0dp"
@@ -64,17 +68,16 @@
                 android:layout_marginTop="16dp"
                 android:background="@drawable/custom_edittext"
                 android:hint="Enter Email *"
-                android:textColorHint="@color/dark_brown"
                 android:inputType="textEmailAddress"
                 android:padding="8dp"
                 android:textColor="@color/black"
+                android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@id/RName"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_margin="16dp"
-                app:layout_constraintTop_toBottomOf="@id/RName" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- ID -->
             <EditText
                 android:id="@+id/RId"
                 android:layout_width="0dp"
@@ -87,12 +90,11 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@id/REmail"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_margin="16dp"
-                app:layout_constraintTop_toBottomOf="@id/REmail" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- Phone No -->
             <EditText
                 android:id="@+id/Phoneno"
                 android:layout_width="0dp"
@@ -102,15 +104,14 @@
                 android:hint="Phone No (10 digits) *"
                 android:inputType="phone"
                 android:padding="8dp"
-                android:textColorHint="@color/dark_brown"
                 android:textColor="@color/black"
+                android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@id/RId"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_margin="16dp"
-                app:layout_constraintTop_toBottomOf="@id/RId" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- Password -->
             <EditText
                 android:id="@+id/RPassword"
                 android:layout_width="0dp"
@@ -123,22 +124,21 @@
                 android:textColor="@color/black"
                 android:textColorHint="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintTop_toBottomOf="@id/Phoneno"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_margin="16dp"
-                app:layout_constraintTop_toBottomOf="@id/Phoneno" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- User Type -->
             <RadioGroup
                 android:id="@+id/userTypeGroup"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:orientation="horizontal"
                 android:gravity="center"
                 app:layout_constraintTop_toBottomOf="@id/RPassword"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="16dp">
+                app:layout_constraintEnd_toEndOf="parent">
 
                 <RadioButton
                     android:id="@+id/radioStudent"
@@ -159,10 +159,12 @@
                     android:buttonTint="@color/light_yellow" />
             </RadioGroup>
 
+            <!-- Shop Name (for Vendor) -->
             <EditText
                 android:id="@+id/shopName"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
+                android:layout_marginTop="10dp"
                 android:hint="Enter Shop Name *"
                 android:visibility="gone"
                 android:background="@drawable/custom_edittext"
@@ -171,37 +173,36 @@
                 android:textSize="16sp"
                 app:layout_constraintTop_toBottomOf="@id/userTypeGroup"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- Register Button -->
             <Button
                 android:id="@+id/RRegisterButton"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
                 android:backgroundTint="@color/dark_orange"
                 android:text="Register"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
                 app:cornerRadius="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@id/shopName"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/shopName" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- ProgressBar -->
             <ProgressBar
                 android:id="@+id/progressBar"
                 style="?android:attr/progressBarStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/RRegisterButton"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="10dp" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- Login Text -->
             <TextView
                 android:id="@+id/logintext"
                 android:layout_width="0dp"
@@ -211,11 +212,11 @@
                 android:textAlignment="center"
                 android:textColor="@color/dark_brown"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@id/progressBar"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/progressBar" />
+                app:layout_constraintEnd_toEndOf="parent" />
 
+            <!-- Login Button -->
             <Button
                 android:id="@+id/RLoginButton"
                 android:layout_width="0dp"
@@ -225,14 +226,11 @@
                 android:text="Login"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
                 app:cornerRadius="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintTop_toBottomOf="@id/logintext"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/logintext" />
+                app:layout_constraintEnd_toEndOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
