--- a/app/src/main/res/layout/fragment__cart_student.xml
+++ b/app/src/main/res/layout/fragment__cart_student.xml
@@ -1,9 +1,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/yellow"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".Fragment_CartStudent">
 
     <TextView
         android:id="@+id/textTotalPrice"
