--- a/app/src/main/res/layout/fragment__profile_student.xml
+++ b/app/src/main/res/layout/fragment__profile_student.xml
@@ -6,24 +6,24 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="@color/yellow"
+    tools:context=".Fragment_ProfileStudent"
     >
 
     <!-- Circular Logout Button at Top-Right -->
-
-    <!-- Title -->
     <ImageButton
         android:id="@+id/logout_button_stu"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/button_rounded"
+        android:src="@drawable/baseline_exit_to_app_24"
         android:contentDescription="Logout"
         android:scaleType="centerInside"
-        android:src="@drawable/baseline_exit_to_app_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Title -->
     <TextView
         android:id="@+id/profile_title"
         android:layout_width="300dp"
@@ -43,8 +43,8 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/profile_card"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="15dp"
         app:cardCornerRadius="12dp"
         app:cardElevation="18dp"
@@ -62,90 +62,91 @@
                 android:id="@+id/profile_name"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="NAME"
+                android:layout_marginBottom="10dp"
                 android:background="@color/light_yellow"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:hint="NAME"
+                android:padding="10dp"
                 android:textColor="@color/dark_brown"
                 android:textColorHint="@color/dark_brown"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:focusable="false"
-                android:layout_marginBottom="10dp"/>
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/profile_email"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="E-MAIL"
+                android:layout_marginBottom="10dp"
                 android:background="@color/light_yellow"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:hint="E-MAIL"
+                android:padding="10dp"
                 android:textColor="@color/dark_brown"
                 android:textColorHint="@color/dark_brown"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:focusable="false"
-                android:layout_marginBottom="10dp"/>
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/profile_phone"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="PHONE NO"
+                android:layout_marginBottom="10dp"
                 android:background="@color/light_yellow"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:hint="PHONE NO"
+                android:padding="10dp"
                 android:textColor="@color/dark_brown"
                 android:textColorHint="@color/dark_brown"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:focusable="false"
-                android:layout_marginBottom="10dp"/>
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/profile_id"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:hint="ID"
+                android:layout_marginBottom="20dp"
                 android:background="@color/light_yellow"
+                android:focusable="false"
+                android:gravity="center_vertical"
+                android:hint="ID"
+                android:padding="10dp"
                 android:textColor="@color/dark_brown"
                 android:textColorHint="@color/dark_brown"
-                android:padding="10dp"
-                android:textSize="16sp"
-                android:gravity="center_vertical"
-                android:focusable="false"
-                android:layout_marginBottom="20dp"/>
+                android:textSize="16sp" />
 
             <Button
                 android:id="@+id/change_password_button"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:text="Change Password"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="@color/dark_orange"
-                android:layout_marginTop="10dp"/>
+                android:text="Change Password"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/edit_profile_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Edit Profile"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="@color/dark_orange"
-                android:layout_marginTop="10dp"/>
+                android:text="Edit Profile"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/save_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Save Changes"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="@color/dark_orange"
-                android:layout_marginTop="10dp"/>
+                android:enabled="false"
+                android:text="Save Changes"
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
